# brivit

./: README.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt
brivit/: __init__.py
brivit/augment/: audio_augment.py
brivit/baselines/: cnn.py  features.py  runners.py
brivit/config/: loader.py
brivit/data/: dataset.py  splits.py
brivit/evaluation/: aggregate.py  metrics.py  significance.py
brivit/models/: brivit.py
brivit/preprocess/: brain_inspired.py
brivit/training/: optim.py  train_baseline.py  train_main.py
brivit/utils/: logging_utils.py  runs.py  runtime_meta.py
configs/: default.yaml
scripts/: build_split.py  run_ablation.py  run_baselines.py  run_main.py  summarize.py
tests/: conftest.py  test_aggregate.py  test_dataset.py  test_metrics.py  test_model.py  test_runtime.py  test_splits.py
